add code core